Made small changes in stylesheet trying to remove bug with checkboxes not being aligned center when textis more than one row.

--- a/src/components/ToDoCard.css
+++ b/src/components/ToDoCard.css
@@ -2,9 +2,7 @@
   background-color: #201f1f;
   border-radius: 8px;
   margin-bottom: 7px;
-  height: 60px;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   font-size: 18px;
@@ -21,8 +19,7 @@
 }
 
 .checkbox-container {
-  margin: 15px;
-  display: block;
+  margin-left: 15px;
   position: relative;
   cursor: pointer;
   -webkit-user-select: none;
@@ -42,6 +39,7 @@
 
 /* Create a custom checkbox */
 .checkmark {
+  width: 61px;
   position: absolute;
   top: 0;
   left: 0;
